+GetNotesByUserID POST request
